displays restaurants on front end

--- a/server/components/index.html
+++ b/server/components/index.html
@@ -5,6 +5,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/6fd7bfaf7e.js"></script>
+    <script src="js/restaurant.js"></script>
     <script src="js/tracker.js"></script>
     <script src="js/main.js"></script>
     <meta name="viewport" content="initial-scale=1, user-scalable=no">
@@ -71,7 +72,9 @@
             </tr>
             </thead>
             <tbody id="display-area">
-
+                <tr>
+                    <td class="col-xs-2 col-md-2">hello</td>
+                </tr>
             </tbody>
         </table>
     </div>
