--- a/server/components/index.html
+++ b/server/components/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/6fd7bfaf7e.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>    <script src="https://kit.fontawesome.com/6fd7bfaf7e.js"></script>
     <script src="js/restaurant.js"></script>
     <script src="js/tracker.js"></script>
     <script src="js/main.js"></script>
@@ -74,6 +72,54 @@
             <tbody id="display-area">
             </tbody>
         </table>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+        
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Edit Restaurant</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group input-group col-xs-12 col-lg-12">
+                        <span class="input-group-addon">
+                            <span><i class="fas fa-utensils"></i></span>
+                        </span>
+                        <input type="text" class="form-control form-rounded" name="restaurant-name" id="update-name" placeholder="Restaurant Name">
+                    </div>
+                    <div class="form-group input-group col-xs-12 col-lg-12">
+                        <span class="input-group-addon">
+                            <span><i class="fas fa-question"></i></span>
+                        </span>
+                        <input type="text" class="form-control form-rounded" name="cuisine" id="update-cuisine" placeholder="Cuisine">
+                    </div>
+                    <div class="form-group input-group col-xs-12 col-lg-12">
+                        <span class="input-group-addon">
+                            <span><i class="fas fa-glass-cheers"></i></span>
+                        </span>
+                        <input type="text" class="form-control form-rounded" name="in-or-out" id="update-in-or-out" placeholder="Fast Food/ Dine In">
+                    </div>
+                    <div class="form-group input-group col-xs-12 col-lg-12">
+                        <span class="input-group-addon">
+                            <span><i class="fas fa-dollar-sign"></i></span>
+                        </span>
+                        <input type="text" class="form-control form-rounded" name="expense" id="update-expense" placeholder="Rate your expense">
+                    </div>
+                    <div class="form-group input-group col-xs-12 col-lg-12">
+                        <span class="input-group-addon">
+                            <span><i class="fas fa-users"></i></span>
+                        </span>
+                        <input type="text" class="form-control form-rounded" name="party-of" id="update-party-of" placeholder="Good for part of">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
