--- a/server/components/index.html
+++ b/server/components/index.html
@@ -117,6 +117,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button id="save-button" type="button" class="btn btn-default" data-dismiss="modal">Save</button>
                 </div>
             </div>
         </div>
