dynamic aggregate total totals all restaurants added

--- a/server/components/index.html
+++ b/server/components/index.html
@@ -14,7 +14,7 @@
     <div class="page-header media-heading col-xs-12 col-lg-12">
         <!-- only show this element when the isnt on mobile -->
         <h1 class="hidden-xs col-lg-12">Restaurant Tracker
-            <small class="col-lg-offset-6">Total Restaurants: <span class="total-rest">0</span></small>
+            <small class="col-lg-offset-6">Total Restaurants: <span id="total">0</span></small>
         </h1>
         <!-- only show this element when the user gets to a mobile version -->
         <h3 class="hidden-md hidden-lg hidden-xl">Restaurant Tracker
@@ -55,7 +55,6 @@
         </div>
         <button type="button" class="add btn btn-success" id="add-button">Add</button>
         <button type="button" class="cancel btn btn-default" id="cancel-button">Cancel</button>
-        <button type="button" class="data btn btn-success" id="data-button">Get data from server</button>
     </div>
     <div class="student-list-container page-header media-heading col-xs-12 col-md-9 col-lg-9">
         <table class="student-list col-lg-12">
